package co.edu.unisinu.ingsistemas.ds2.datos;

/**
 *
 * @author gasler (Miller vargas mola)
 * 
 */

class Practica {
    
private int odigo;
private String fecha;
private float nota;

    /**
     * @return the odigo
     */
    public int getOdigo() {
        return odigo;
    }

    /**
     * @param odigo the odigo to set
     */
    public void setOdigo(int odigo) {
        this.odigo = odigo;
    }

    /**
     * @return the fecha
     */
    public String getFecha() {
        return fecha;
    }

    /**
     * @param fecha the fecha to set
     */
    public void setFecha(String fecha) {
        this.fecha = fecha;
    }

    /**
     * @return the nota
     */
    public float getNota() {
        return nota;
    }

    /**
     * @param nota the nota to set
     */
    public void setNota(float nota) {
        this.nota = nota;
    }
}
