@startuml
!theme reddress-lightgreen
class Estudiantes {

- nombre:String
- matricula:int

+ Estudiantes():void
+ setMatricula(int): void
+ getMatricula(): int
+ setNombre(String ): void
+ getNombre(): String

}

class Pruebas{

- name: String
- apertura: date
- contenido: List<Preguntas>
- porcentaje: float
- descripcion: String

+ Pruebas():void
+ setCodigo(String):void
+ getCodigo():STring
+ setApertura(date):void
+ getApertura():date
+ setContenido(List):void
+ getContenido():List
+ setPorcentaje(float):void
+ getPorcentaje():float
+ setDescripcion(String):void
+ getDescripcion():String

}

class Practicas{

- intentos:int

+ Practicas():void
+ setIntentos(int):void
+ getIntentos():int
}

class Examenes{

- cierre:date

+ Examenes():void
+ setCierre(date):void
+ getCierre():date

}

class Docentes{

- name:String
- dni:int

+ Docentes():void
+ setName(String):void
+ getName():String
+ setDni(int):void
+ getDni():int

}

class Creaciones{

- name:String
- tipo:String
- fecha_creacion:date
- apertura:date
- cierre:date
- colaboradores:String

+ Creaciones():void
+ setName(String):void
+ getName():String
+ seTipo(String):void
+ geTipo():String
+ setFecha(date):void
+getFecha();date
+ setApertura(Date):void
+ getApertura():Date
+ setCierre(date);void
+ getCierre():date

}

class ListaNotas{
 - Registro:List<Realizaciones>

+ Notas():void
+ setRegistro():void
+ getRegisto():List<Realizaciones>
}

class Realizaciones{
- nota:float

+ Realizaciones():void
+ setNota(float).void
+ getNota():float
}


class Preguntas{
- encabezado:String

+ Preguntas():void
+ setEnacabezado(String):void
+ getEncabezado():String
}

class Opciones{
-id:int
- opcion_a:String
- opcion_b:String
- opcion_c:String

+ Opciones():void
+ setA(String):void
+ getA():String
+ setB(String):void
+ getB():String
+ setC(String):void
+ getC():String
}

class Respuestas{
- opcion_correcta:String

+ Respuestas():void
+ setOpcionCorrecta(String):void
+ getOpcionCorrecta():String
}

Estudiantes "1..*" }-- "0..*" Realizaciones

Docentes "1..*" }-- "0..*" ListaNotas
Docentes "1..*" }-- "1" Creaciones

ListaNotas "1" --{ "0..*" Realizaciones

Pruebas "1" -- "1" Creaciones
Pruebas "1..*" }-- "1" Realizaciones
Pruebas "1" --{ "1..*" Preguntas
Pruebas <|--  Examenes
Pruebas <|--  Practicas

Preguntas "1" --{ "1..*" Opciones
Preguntas "1" -- "1" Respuestas



@enduml